make mobile header

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Thailand</h1>
+      <div id="mobile-ham-menu"></div>
+    </header>
+  </body>
 </html>
