--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <header>
       <h1>Thailand</h1>
       <div id="mobile-ham-menu"></div>
+      <nav>
+        <a href="#store">Store</a>
+        <a href="#blog">Blog</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+      </nav>
     </header>
   </body>
 </html>
