--- a/index.html
+++ b/index.html
@@ -19,5 +19,12 @@
         <a href="#contact">Contact</a>
       </nav>
     </header>
+    <div id="content-wrapper">
+      <div class="banner">
+        <h1>Welcome</h1>
+        <h1>to</h1>
+        <h1>Thailand</h1>
+      </div>
+    </div>
   </body>
 </html>
