--- a/index.html
+++ b/index.html
@@ -26,5 +26,16 @@
         <h1>Thailand</h1>
       </div>
     </div>
+    <section>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime,
+        suscipit voluptatibus. Laudantium aliquid expedita officiis optio sit
+        incidunt, eveniet saepe necessitatibus odit labore, veritatis
+        consectetur perferendis quia corrupti, illo maiores? Lorem, ipsum dolor
+        sit amet consectetur adipisicing elit. Voluptatum, explicabo. Nam
+        doloribus quae modi eos officiis repellendus qui accusamus cumque,
+        dignissimos harum earum maiores molestiae quod. Nostrum quasi ullam eum.
+      </p>
+    </section>
   </body>
 </html>
